<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF808080"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/base_config_setting_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_config_setting_server"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editText_server"
            style="@style/Config.CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/base_config_setting_server_hint"
            android:textSize="15sp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_config_setting_port"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editText_port"
            style="@style/Config.CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/base_config_setting_port_hint"
            android:inputType="number"
            android:textSize="15sp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/base_config_confirm"
            android:textColor="@android:color/black" />
    </RelativeLayout>

</LinearLayout>